--- a/autres.html
+++ b/autres.html
@@ -249,42 +249,53 @@
       </figcaption>
     </figure>
 
-    <!--Autres 16
+    <!--Autres 16-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://www.amazon.fr/Dernier-rempart-Arnold-Schwarzenegger/dp/B00B9G1D9Q/ref=tmm_dvd_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/712f9-DHLoL._SL1372_.jpg"
+          alt="Le Dernier Rempart" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Le Dernier Rempart
       </figcaption>
       <figcaption>
-        28,97€
+        DVD
+      </figcaption>
+      <figcaption>
+        7,50€
       </figcaption>
     </figure>
-    -->
   </div>
 
   <div class="othersLine">
-    <!--Autres 17
+    <!--Autres 17-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://www.amazon.fr/Aftermath-Blu-ray-Arnold-Schwarzenegger/dp/B071CR98FB/ref=tmm_blu_title_1?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61VMloCcolL._SL1000_.jpg"
+          alt="Aftermath" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Aftermath
       </figcaption>
       <figcaption>
-        28,97€
+        Blu Ray
+      </figcaption>
+      <figcaption>
+        10,78€
       </figcaption>
     </figure>
--->
-    <!--Autres 18
+
+    <!--Autres 18-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://www.amazon.fr/Killing-Gunther-Blu-ray-Arnold-Schwarzenegger/dp/B079PCBC6L/ref=tmm_blu_title_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/716SpSmGxBL._SL1000_.jpg"
+          alt="Les Heures Sombres" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Killing Gunther
       </figcaption>
       <figcaption>
-        28,97€
+        Blu Ray
+      </figcaption>
+      <figcaption>
+        10,99€
       </figcaption>
     </figure>
--->
+
     <!--Autres 19
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
@@ -305,9 +316,8 @@
       <figcaption>
         28,97€
       </figcaption>
-    </figure>
-
-  </div>  -->
+    </figure>-->
+  </div>
 
     <div class="othersLine">
       <!--Autres 21
