--- a/livres.html
+++ b/livres.html
@@ -590,8 +590,8 @@
 
     <!--Livre 36-->
     <figure>
-      <a href="https://www.amazon.fr/longue-route-Seul-entre-ciels/dp/229004203X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559692004&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61HBwnGKNwL.jpg" alt="La longue route : Seul entre mers et ciels" class="books" /></a>
+      <a href="https://www.amazon.fr/longue-route-Seul-entre-ciels/dp/229004203X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559692004&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61HBwnGKNwL.jpg"
+          alt="La longue route : Seul entre mers et ciels" class="books" /></a>
       <figcaption>
         Bernard Moitessier
       </figcaption>
@@ -608,84 +608,89 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 37
-  <figure>
-    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
-    <figcaption>
-      Francis Scott Fitzgerald
-    </figcaption>
-    <figcaption>
-      Tendre est la nuit
-    </figcaption>
-    <figcaption>
-      7,20€
-    </figcaption>
-  </figure>
-  -->
+    <!--Livre 37-->
+    <figure>
+      <a href="https://www.amazon.fr/Into-wild-Jon-KRAKAUER/dp/2264048301/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559754680&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61tbitzGOyL.jpg" alt="Into the wild"
+          class="books" /></a>
+      <figcaption>
+        Jon Krakauer
+      </figcaption>
+      <figcaption>
+        Into the wild
+      </figcaption>
+      <figcaption>
+        7,50€
+      </figcaption>
+    </figure>
 
-    <!--Livre 38
-  <figure>
-    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Combien veux-tu m'épouser ?
-    </figcaption>
-    <figcaption>
-      17,90€
-    </figcaption>
-  </figure>
-  -->
+    <!--Livre 38-->
+    <figure>
+      <a href="https://www.amazon.fr/LAmour-vie-Jack-London/dp/2070393739/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812eaqFjfmL.jpg" alt="L'Amour de la vie"
+          class="books" /></a>
+      <figcaption>
+        Jack London
+      </figcaption>
+      <figcaption>
+        L'amour de la Vie
+      </figcaption>
+      <figcaption>
+        7,40€
+      </figcaption>
+    </figure>
 
-    <!--Livre 39
-  <figure>
-    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Bilqiss
-    </figcaption>
-    <figcaption>
-      18,00€
-    </figcaption>
-  </figure>
--->
+    <!--Livre 39-->
+    <figure>
+      <a href="https://www.amazon.fr/Promenades-bord-mer-%C3%A9tonnements-heureux/dp/2757869558/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559755152&sr=1-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71JqcWRBeNL.jpg"
+          alt="Promenades en bord de mer et étonnements heureux" class="books" /></a>
+      <figcaption>
+        Olivier de Kersauson
+      </figcaption>
+      <figcaption>
+        Promenades en bord
+      </figcaption>
+      <figcaption>
+        de mer et
+      </figcaption>
+      <figcaption>
+        étonnements heureux
+      </figcaption>
+      <figcaption>
+        6,90€
+      </figcaption>
+    </figure>
 
-    <!--Livre 40
-  <figure>
-    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Sa mère
-    </figcaption>
-    <figcaption>
-      19,00€
-    </figcaption>
-  </figure>
-</div>
--->
+    <!--Livre 40-->
+    <figure>
+      <a href="https://www.amazon.fr/Radiographie-Laurent-Ruquier/dp/2253185795/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=ruquier&qid=1559755187&s=books&sr=1-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81AYOwT7rbL.jpg" alt="Radiographie" class="books" /></a>
+      <figcaption>
+        Laurent Ruquier
+      </figcaption>
+      <figcaption>
+        Radiographie
+      </figcaption>
+      <figcaption>
+        6,90€
+      </figcaption>
+    </figure>
+  </div>
 
-    <!--  <div class="booksLine">
-Livre 41
-  <figure>
-    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
-    <figcaption>
-      Francis Scott Fitzgerald
-    </figcaption>
-    <figcaption>
-      Tendre est la nuit
-    </figcaption>
-    <figcaption>
-      7,20€
-    </figcaption>
-  </figure>
-  -->
+
+  <div class="booksLine">
+    <!--Livre 41-->
+    <figure>
+      <a href="https://www.amazon.fr/supplication-Tchernobyl-chronique-monde-lapocalypse/dp/2290135992/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559840715&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61t%2BKsLr53L.jpg" alt="La supplication" class="books" /></a>
+      <figcaption>
+        Svetlana Alexievitch
+      </figcaption>
+      <figcaption>
+        La supplication
+      </figcaption>
+      <figcaption>
+        6,30€
+      </figcaption>
+    </figure>
 
     <!--Livre 42
   <figure>
