--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -40,19 +40,18 @@
 
     <!--Jeu 2-->
     <figure>
-      <a href="https://www.amazon.fr/ACTIVISION-Crash-Team-Racing-Nitro-Fueled/dp/B07L9ZPWBK/ref=pd_sim_63_16?_encoding=UTF8&pd_rd_i=B07L9ZPWBK&pd_rd_r=90193c37-5b1e-11e9-84c4-abeae36fc6b9&pd_rd_w=0I4xU&pd_rd_wg=ajsNF&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=RQ9ARJE2A97ZKXD1G5XC&psc=1&refRID=RQ9ARJE2A97ZKXD1G5XC"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://pbs.twimg.com/profile_images/1136648305474179073/8fmdPhys_400x400.png" alt="Fifa 20" class="game" /></a>
       <figcaption>
-        Crash Team Racing
+        FIFA 20
       </figcaption>
       <figcaption>
-        29,99€ sur Amazon
+        Précommande sur PlayStation
       </figcaption>
       <figcaption>
-        39,99€ (+ bonus) sur PlayStation
+        Attente d'un mail pour réduction
       </figcaption>
       <figcaption>
-        Sortie le 21 juin
+        Sortie début septembre
       </figcaption>
     </figure>
 
@@ -147,8 +146,6 @@
     </figure>
   </div>
 
-
-
   <div class="gamesLine">
     <!--Jeu 9-->
     <figure>
@@ -165,17 +162,24 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 10
-  <figure>
-    <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
-    <figcaption>
-      Just cause 4
-    </figcaption>
-    <figcaption>
-      28,97€
-    </figcaption>
-  </figure>
--->
+    <!--Jeu 10-->
+    <figure>
+      <a href="https://www.amazon.fr/ACTIVISION-Crash-Team-Racing-Nitro-Fueled/dp/B07L9ZPWBK/ref=pd_sim_63_16?_encoding=UTF8&pd_rd_i=B07L9ZPWBK&pd_rd_r=90193c37-5b1e-11e9-84c4-abeae36fc6b9&pd_rd_w=0I4xU&pd_rd_wg=ajsNF&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=RQ9ARJE2A97ZKXD1G5XC&psc=1&refRID=RQ9ARJE2A97ZKXD1G5XC"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
+      <figcaption>
+        Crash Team Racing
+      </figcaption>
+      <figcaption>
+        29,99€ sur Amazon
+      </figcaption>
+      <figcaption>
+        39,99€ (+ bonus) sur PlayStation
+      </figcaption>
+      <figcaption>
+        Sortie le 21 juin
+      </figcaption>
+    </figure>
+
     <!--Jeu 11
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
