MAJ Prix livres et autres

--- a/autres.html
+++ b/autres.html
@@ -32,7 +32,7 @@
         Version noire
       </figcaption>
       <figcaption>
-        25,00€
+        Ruptude de Stock
       </figcaption>
     </figure>
 
@@ -62,7 +62,7 @@
         L'intégrale en Blu-Ray
       </figcaption>
       <figcaption>
-        51,23€
+        53,99€
       </figcaption>
     </figure>
 
@@ -139,35 +139,31 @@
   <div class="othersLine">
     <!--Autres 9-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250" alt="Game of Thrones" class="others" /></a>
+      <a href="https://www.amazon.fr/Aftermath-Blu-ray-Arnold-Schwarzenegger/dp/B071CR98FB/ref=tmm_blu_title_1?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61VMloCcolL._SL1000_.jpg"
+          alt="Aftermath" class="others" /></a>
       <figcaption>
-        Game of Thrones
-      </figcaption>
-      <figcaption>
-        L'intégrale des 8 saisons
+        Aftermath
       </figcaption>
       <figcaption>
         Blu Ray
       </figcaption>
       <figcaption>
-        Pas encore sorti
+        10,78€
       </figcaption>
     </figure>
 
     <!--Autres 10-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250" alt="Big Bang Theory" class="others" /></a>
+      <a href="https://www.amazon.fr/Killing-Gunther-Blu-ray-Arnold-Schwarzenegger/dp/B079PCBC6L/ref=tmm_blu_title_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/716SpSmGxBL._SL1000_.jpg"
+          alt="Les Heures Sombres" class="others" /></a>
       <figcaption>
-        The Big Bang Theory
-      </figcaption>
-      <figcaption>
-        L'intégrale des 12 saisons
+        Killing Gunther
       </figcaption>
       <figcaption>
         Blu Ray
       </figcaption>
       <figcaption>
-        Pas encore sorti
+        10,99€
       </figcaption>
     </figure>
 
@@ -179,7 +175,7 @@
         Monopoly GoT
       </figcaption>
       <figcaption>
-        32,86€
+        29,99€
       </figcaption>
     </figure>
 
@@ -191,7 +187,7 @@
         Mug Alexa Bliss
       </figcaption>
       <figcaption>
-        18,43€
+        18,34€
       </figcaption>
       <figcaption>
         wwe.com (USA)
@@ -212,7 +208,7 @@
         Bientôt en fin de série
       </figcaption>
       <figcaption>
-        5,81€
+        5,79€
       </figcaption>
       <figcaption>
         wwe.com (USA)
@@ -230,7 +226,7 @@
         Bientôt en fin de série
       </figcaption>
       <figcaption>
-        9,69€
+        9,65€
       </figcaption>
       <figcaption>
         wwe.com (USA)
@@ -266,7 +262,7 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 17-->
+    <!--Autres 17
     <figure>
       <a href="https://www.amazon.fr/Aftermath-Blu-ray-Arnold-Schwarzenegger/dp/B071CR98FB/ref=tmm_blu_title_1?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61VMloCcolL._SL1000_.jpg"
           alt="Aftermath" class="others" /></a>
@@ -279,9 +275,9 @@
       <figcaption>
         10,78€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 18-->
+    <!--Autres 18
     <figure>
       <a href="https://www.amazon.fr/Killing-Gunther-Blu-ray-Arnold-Schwarzenegger/dp/B079PCBC6L/ref=tmm_blu_title_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/716SpSmGxBL._SL1000_.jpg"
           alt="Les Heures Sombres" class="others" /></a>
@@ -294,7 +290,7 @@
       <figcaption>
         10,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 19
     <figure>
