--- a/autres.html
+++ b/autres.html
@@ -235,8 +235,8 @@
 
     <!--Autres 15-->
     <figure>
-      <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp"
-          alt="Mug Zerator" class="others" /></a>
+      <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
+          src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
       <figcaption>
         Mug Zerator
       </figcaption>
@@ -315,8 +315,8 @@
     </figure>-->
   </div>
 
-    <div class="othersLine">
-      <!--Autres 21
+  <div class="othersLine">
+    <!--Autres 21
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -327,7 +327,7 @@
       </figcaption>
     </figure>
 -->
-      <!--Autres 22
+    <!--Autres 22
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -338,7 +338,7 @@
       </figcaption>
     </figure>
 -->
-      <!--Autres 23
+    <!--Autres 23
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -349,7 +349,7 @@
       </figcaption>
     </figure>
 -->
-      <!--Autres 24
+    <!--Autres 24
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -362,8 +362,54 @@
 
   </div>  -->
 
+    <div class="othersLine">
+      <!--Autres 25
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+      <!--Autres 26
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+      <!--Autres 27
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+      <!--Autres 28
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
       <div class="othersLine">
-        <!--Autres 25
+        <!--Autres 29
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -374,7 +420,7 @@
       </figcaption>
     </figure>
 -->
-        <!--Autres 26
+        <!--Autres 30
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -385,7 +431,7 @@
       </figcaption>
     </figure>
 -->
-        <!--Autres 27
+        <!--Autres 31
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -396,7 +442,7 @@
       </figcaption>
     </figure>
 -->
-        <!--Autres 28
+        <!--Autres 32
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -409,7 +455,7 @@
 
   </div>  -->
         <div class="othersLine">
-          <!--Autres 29
+          <!--Autres 33
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -420,7 +466,7 @@
       </figcaption>
     </figure>
 -->
-          <!--Autres 30
+          <!--Autres 34
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -431,7 +477,7 @@
       </figcaption>
     </figure>
 -->
-          <!--Autres 31
+          <!--Autres 35
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -442,7 +488,7 @@
       </figcaption>
     </figure>
 -->
-          <!--Autres 32
+          <!--Autres 36
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -455,7 +501,7 @@
 
   </div>  -->
           <div class="othersLine">
-            <!--Autres 33
+            <!--Autres 37
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -466,7 +512,7 @@
       </figcaption>
     </figure>
 -->
-            <!--Autres 34
+            <!--Autres 38
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -477,7 +523,7 @@
       </figcaption>
     </figure>
 -->
-            <!--Autres 35
+            <!--Autres 39
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -488,7 +534,7 @@
       </figcaption>
     </figure>
 -->
-            <!--Autres 36
+            <!--Autres 40
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -501,7 +547,7 @@
 
   </div>  -->
             <div class="othersLine">
-              <!--Autres 37
+              <!--Autres 41
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -512,7 +558,7 @@
       </figcaption>
     </figure>
 -->
-              <!--Autres 38
+              <!--Autres 42
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -523,7 +569,7 @@
       </figcaption>
     </figure>
 -->
-              <!--Autres 39
+              <!--Autres 43
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -534,7 +580,7 @@
       </figcaption>
     </figure>
 -->
-              <!--Autres 40
+              <!--Autres 44
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -547,7 +593,7 @@
 
   </div>  -->
               <div class="othersLine">
-                <!--Autres 41
+                <!--Autres 45
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -558,7 +604,7 @@
       </figcaption>
     </figure>
 -->
-                <!--Autres 42
+                <!--Autres 46
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -569,7 +615,7 @@
       </figcaption>
     </figure>
 -->
-                <!--Autres 43
+                <!--Autres 47
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -580,7 +626,7 @@
       </figcaption>
     </figure>
 -->
-                <!--Autres 44
+                <!--Autres 48
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -593,7 +639,7 @@
 
   </div>  -->
                 <div class="othersLine">
-                  <!--Autres 45
+                  <!--Autres 49
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -604,7 +650,7 @@
       </figcaption>
     </figure>
 -->
-                  <!--Autres 46
+                  <!--Autres 50
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -615,7 +661,7 @@
       </figcaption>
     </figure>
 -->
-                  <!--Autres 47
+                  <!--Autres 51
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -626,7 +672,7 @@
       </figcaption>
     </figure>
 -->
-                  <!--Autres 48
+                  <!--Autres 52
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -639,7 +685,7 @@
 
   </div>  -->
                   <div class="othersLine">
-                    <!--Autres 49
+                    <!--Autres 53
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -650,7 +696,7 @@
       </figcaption>
     </figure>
 -->
-                    <!--Autres 50
+                    <!--Autres 54
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -661,7 +707,7 @@
       </figcaption>
     </figure>
 -->
-                    <!--Autres 51
+                    <!--Autres 55
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -672,7 +718,7 @@
       </figcaption>
     </figure>
 -->
-                    <!--Autres 52
+                    <!--Autres 56
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -685,7 +731,7 @@
 
   </div>  -->
                     <div class="othersLine">
-                      <!--Autres 53
+                      <!--Autres 57
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -696,7 +742,7 @@
       </figcaption>
     </figure>
 -->
-                      <!--Autres 54
+                      <!--Autres 58
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -707,7 +753,7 @@
       </figcaption>
     </figure>
 -->
-                      <!--Autres 55
+                      <!--Autres 59
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
@@ -718,53 +764,7 @@
       </figcaption>
     </figure>
 -->
-                      <!--Autres 56
-    <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
-      <figcaption>
-        Just cause 4
-      </figcaption>
-      <figcaption>
-        28,97€
-      </figcaption>
-    </figure>
-
-  </div>  -->
-                      <div class="othersLine">
-                        <!--Autres 57
-    <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
-      <figcaption>
-        Just cause 4
-      </figcaption>
-      <figcaption>
-        28,97€
-      </figcaption>
-    </figure>
--->
-                        <!--Autres 58
-    <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
-      <figcaption>
-        Just cause 4
-      </figcaption>
-      <figcaption>
-        28,97€
-      </figcaption>
-    </figure>
--->
-                        <!--Autres 59
-    <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
-      <figcaption>
-        Just cause 4
-      </figcaption>
-      <figcaption>
-        28,97€
-      </figcaption>
-    </figure>
--->
-                        <!--Autres 60
+                      <!--Autres 60
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
