--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -63,10 +63,10 @@
         Days Gone
       </figcaption>
       <figcaption>
-        49,99€ sur Amazon
+        48,29€ sur Amazon
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        46,49€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -78,10 +78,10 @@
         Red Dead Redemption 2
       </figcaption>
       <figcaption>
-        39,30€ sur Amazon
+        29,99€ sur Amazon
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        44,79€ sur PlayStation
       </figcaption>
     </figure>
   </div>
@@ -95,10 +95,10 @@
         Shadow of the Tomb Raider
       </figcaption>
       <figcaption>
-        28,49€ sur Amazon
+        27,09€ sur Amazon
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        27,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -110,10 +110,10 @@
         God Of War
       </figcaption>
       <figcaption>
-        41,85€ sur Amazon
+        29,90€ sur Amazon
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        26,49€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -155,25 +155,21 @@
         Just cause 4
       </figcaption>
       <figcaption>
-        28,49€ sur Amazon
+        24,28€ sur Amazon
       </figcaption>
       <figcaption>
-        34,99€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
     <!--Jeu 10-->
     <figure>
-      <a href="https://www.amazon.fr/ACTIVISION-Crash-Team-Racing-Nitro-Fueled/dp/B07L9ZPWBK/ref=pd_sim_63_16?_encoding=UTF8&pd_rd_i=B07L9ZPWBK&pd_rd_r=90193c37-5b1e-11e9-84c4-abeae36fc6b9&pd_rd_w=0I4xU&pd_rd_wg=ajsNF&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=RQ9ARJE2A97ZKXD1G5XC&psc=1&refRID=RQ9ARJE2A97ZKXD1G5XC"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
       <figcaption>
         Crash Team Racing
       </figcaption>
       <figcaption>
-        29,99€ sur Amazon
-      </figcaption>
-      <figcaption>
-        39,99€ (+ bonus) sur PlayStation
+        39,99€ sur PlayStation
       </figcaption>
       <figcaption>
         Sortie le 21 juin
